:lipstick: nave bar improved :smile:

--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,71 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="theme-color" content="#317EFB" />
-    <title>Cast The Vote</title>
-    <base href="/">
+	<head>
+		<meta charset="utf-8">
+		<meta name="theme-color" content="#317EFB" />
+		<title>Cast The Vote</title>
+		<base href="/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script>
-      const navU = navigator.userAgent;
-      // Android Mobile
-      const isAndroidMobile = navU.indexOf('Android') > -1 &&
-        navU.indexOf('Mozilla/5.0') > -1 && navU.indexOf('AppleWebKit') > -1;
-      // Apple webkit
-      const regExAppleWebKit = new RegExp(/AppleWebKit\/([\d.]+)/);
-      const resultAppleWebKitRegEx = regExAppleWebKit.exec(navU);
-      const appleWebKitVersion =
-        (resultAppleWebKitRegEx === null ?
-          null :
-          parseFloat(regExAppleWebKit.exec(navU)[1]));
-      // Chrome
-      const regExChrome = new RegExp(/Chrome\/([\d.]+)/);
-      const resultChromeRegEx = regExChrome.exec(navU);
-      const chromeVersion =
-        (resultChromeRegEx === null ? null :
-          parseFloat(regExChrome.exec(navU)[1]));
-      // Native Android Browser
-      const isAndroidBrowser = isAndroidMobile &&
-        (appleWebKitVersion !== null && appleWebKitVersion <= 537) ||
-        (chromeVersion !== null && chromeVersion <= 42);
-      // window.alert("androidversion" + isAndroidBrowser +"\napplewebkit" + appleWebKitVersion +"\n chrome version"+ chromeVersion);
-      // If isAndroidBrowser, redirect
-      if (isAndroidBrowser) {
-        window.alert("androidversion" + isAndroidBrowser + "\napplewebkit" + appleWebKitVersion + "\n chrome version" +
-          chromeVersion);
-        window.location = ('/static');
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<script>
+			const navU = navigator.userAgent;
+			// Android Mobile
+			const isAndroidMobile = navU.indexOf( 'Android' ) > -1 &&
+				navU.indexOf( 'Mozilla/5.0' ) > -1 && navU.indexOf( 'AppleWebKit' ) > -1;
+			// Apple webkit
+			const regExAppleWebKit = new RegExp( /AppleWebKit\/([\d.]+)/ );
+			const resultAppleWebKitRegEx = regExAppleWebKit.exec( navU );
+			const appleWebKitVersion =
+				( resultAppleWebKitRegEx === null ?
+					null :
+					parseFloat( regExAppleWebKit.exec( navU )[ 1 ] ) );
+			// Chrome
+			const regExChrome = new RegExp( /Chrome\/([\d.]+)/ );
+			const resultChromeRegEx = regExChrome.exec( navU );
+			const chromeVersion =
+				( resultChromeRegEx === null ? null :
+					parseFloat( regExChrome.exec( navU )[ 1 ] ) );
+			// Native Android Browser
+			const isAndroidBrowser = isAndroidMobile &&
+				( appleWebKitVersion !== null && appleWebKitVersion <= 537 ) ||
+				( chromeVersion !== null && chromeVersion <= 42 );
+			// window.alert("androidversion" + isAndroidBrowser +"\napplewebkit" + appleWebKitVersion +"\n chrome version"+ chromeVersion);
+			// If isAndroidBrowser, redirect
+			if ( isAndroidBrowser )
+			{
+				window.alert( "androidversion" + isAndroidBrowser + "\napplewebkit" + appleWebKitVersion + "\n chrome version" +
+					chromeVersion );
+				window.location = ( '/static' );
 
-      }
+			}
 
-    </script>
+		</script>
 
-    <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#1976d2">
-  </head>
+		<link rel="manifest" href="manifest.json">
+		<meta name="theme-color" content="#1976d2">
+	</head>
 
-  <body class="page">
-    <nav class="navbar bg-primary text-center">
-      
-        <img src="./assets/icons/icon-72x72.png" width="30" height="30" alt=""  >
-        <h4 class=" text-white-50">cast the vote</h3>
+	<body class="page">
+		<nav class="navbar-static-top ">
+			<div class="container-fluid border-bottom border-primary">
+				<div class="row bg-gray my-2">
+					<div class="col-2 my-2">
+						<img src="./favicon.ico" class="ml-2 " width="30" height="30" alt="">
+					</div>
+					<div class="col-10 text-right">
+						<p class="d-inline h2 mt-2 text-right">Cast the vote</p>
+					</div>
+				</div>
+			</div>
+		</nav>
+		<div>
 
-    </nav>
-    <app-root></app-root>
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
-    </head>
-  </body>
+		</div>
+		<app-root></app-root>
+		<noscript>Please enable JavaScript to continue using this application.</noscript>
+		</head>
+	</body>
 
 </html>
